# AnSimAvatarProjekt

./: .clang-format  CMakeLists.txt
executables/02_Dragon_Fractal/: main.cpp
executables/03_LineClipping/: CMakeLists.txt  main.cpp
executables/04_MovingThingsPractice/: Particles.cpp  Particles.h  main.cpp
executables/04_Moving_Fir/: Particles.cpp  Particles.h  main.cpp
executables/05_Transform/: main.cpp
executables/06_Graph/: main.cpp
executables/07_PerspectiveViewport/: Teapot.h  main.cpp
executables/08_Toon_Example/: main.cpp
executables/09_Texture_Example/: main.cpp
executables/09_Transparency_Example/: main.cpp
executables/10_BezierSurface_Example/: main.cpp
executables/11_SunEarthMoon_Example/: Teapot.h  main.cpp
shaders/: CMakeLists.txt
shaders/04_Moving_Fir/: fir.frag  fir.vert
shaders/05_Transform/: minimal.vert
shaders/06_Graph/: graph.frag  graph.vert
shaders/07_PerspectiveViewport/: depth.frag  depth.vert
shaders/08_Toon_Example/: toon.frag  toon.vert
shaders/09_TexturedCube/: cube.frag  cube.vert
shaders/09_Transparency/: minimal.frag  minimal.vert
shaders/10_BezierSurface/: patch.frag  patch.vert
shaders/11_Hierarchy/: phong.frag  phong.vert
